# pkg/apiclient/api/openapi.yaml
@@ -421,6 +421,78 @@ paths:
       tags:
       - profile
       x-codegen-request-body-name: profileData
+  /project-config:
+    get:
+      description: List project configs
+      operationId: ListProjectConfigs
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/ProjectConfig'
+                type: array
+          description: OK
+      summary: List project configs
+      tags:
+      - project-config
+    put:
+      description: Set project config data
+      operationId: SetProjectConfig
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateProjectConfigDTO'
+        description: Project config
+        required: true
+      responses:
+        "201":
+          content: {}
+          description: Created
+      summary: Set project config data
+      tags:
+      - project-config
+      x-codegen-request-body-name: projectConfig
+  /project-config/{configName}:
+    delete:
+      description: Delete project config data
+      operationId: DeleteProjectConfig
+      parameters:
+      - description: Config name
+        in: path
+        name: configName
+        required: true
+        schema:
+          type: string
+      responses:
+        "204":
+          content: {}
+          description: No Content
+      summary: Delete project config data
+      tags:
+      - project-config
+    get:
+      description: Get project config data
+      operationId: GetProjectConfig
+      parameters:
+      - description: Config name
+        in: path
+        name: configName
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ProjectConfig'
+          description: OK
+      summary: Get project config data
+      tags:
+      - project-config
   /provider:
     get:
       description: List providers
@@ -625,7 +697,7 @@ paths:
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/CreateWorkspaceRequest'
+              $ref: '#/components/schemas/CreateWorkspaceDTO'
         description: Create workspace
         required: true
       responses:
@@ -827,65 +899,7 @@ components:
         username:
           type: string
       type: object
-    CreateWorkspaceRequest:
-      example:
-        projects:
-        - image: image
-          build:
-            devcontainer:
-              devContainerFilePath: devContainerFilePath
-          envVars:
-            key: envVars
-          name: name
-          source:
-            repository:
-              owner: owner
-              path: path
-              name: name
-              id: id
-              source: source
-              prNumber: 0
-              branch: branch
-              sha: sha
-              url: url
-          user: user
-        - image: image
-          build:
-            devcontainer:
-              devContainerFilePath: devContainerFilePath
-          envVars:
-            key: envVars
-          name: name
-          source:
-            repository:
-              owner: owner
-              path: path
-              name: name
-              id: id
-              source: source
-              prNumber: 0
-              branch: branch
-              sha: sha
-              url: url
-          user: user
-        name: name
-        id: id
-        target: target
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-        projects:
-          items:
-            $ref: '#/components/schemas/CreateWorkspaceRequestProject'
-          type: array
-        target:
-          type: string
-      required:
-      - projects
-      type: object
-    CreateWorkspaceRequestProject:
+    CreateProjectConfigDTO:
       example:
         image: image
         build:
@@ -918,13 +932,11 @@ components:
         name:
           type: string
         source:
-          $ref: '#/components/schemas/CreateWorkspaceRequestProjectSource'
+          $ref: '#/components/schemas/CreateProjectConfigSourceDTO'
         user:
           type: string
-      required:
-      - name
       type: object
-    CreateWorkspaceRequestProjectSource:
+    CreateProjectConfigSourceDTO:
       example:
         repository:
           owner: owner
@@ -939,6 +951,106 @@ components:
       properties:
         repository:
           $ref: '#/components/schemas/GitRepository'
+      type: object
+    CreateProjectDTO:
+      example:
+        image: image
+        build:
+          devcontainer:
+            devContainerFilePath: devContainerFilePath
+        envVars:
+          key: envVars
+        existingProjectConfigName: existingProjectConfigName
+        name: name
+        source:
+          repository:
+            owner: owner
+            path: path
+            name: name
+            id: id
+            source: source
+            prNumber: 0
+            branch: branch
+            sha: sha
+            url: url
+        user: user
+      properties:
+        build:
+          $ref: '#/components/schemas/ProjectBuild'
+        envVars:
+          additionalProperties:
+            type: string
+          type: object
+        existingProjectConfigName:
+          type: string
+        image:
+          type: string
+        name:
+          type: string
+        source:
+          $ref: '#/components/schemas/CreateProjectConfigSourceDTO'
+        user:
+          type: string
+      type: object
+    CreateWorkspaceDTO:
+      example:
+        projects:
+        - image: image
+          build:
+            devcontainer:
+              devContainerFilePath: devContainerFilePath
+          envVars:
+            key: envVars
+          existingProjectConfigName: existingProjectConfigName
+          name: name
+          source:
+            repository:
+              owner: owner
+              path: path
+              name: name
+              id: id
+              source: source
+              prNumber: 0
+              branch: branch
+              sha: sha
+              url: url
+          user: user
+        - image: image
+          build:
+            devcontainer:
+              devContainerFilePath: devContainerFilePath
+          envVars:
+            key: envVars
+          existingProjectConfigName: existingProjectConfigName
+          name: name
+          source:
+            repository:
+              owner: owner
+              path: path
+              name: name
+              id: id
+              source: source
+              prNumber: 0
+              branch: branch
+              sha: sha
+              url: url
+          user: user
+        name: name
+        id: id
+        target: target
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        projects:
+          items:
+            $ref: '#/components/schemas/CreateProjectDTO'
+          type: array
+        target:
+          type: string
+      required:
+      - projects
       type: object
     FRPSConfig:
       example:
@@ -1192,6 +1304,36 @@ components:
         devContainerFilePath: devContainerFilePath
       properties:
         devContainerFilePath:
+          type: string
+      type: object
+    ProjectConfig:
+      example:
+        image: image
+        build:
+          devcontainer:
+            devContainerFilePath: devContainerFilePath
+        name: name
+        repository:
+          owner: owner
+          path: path
+          name: name
+          id: id
+          source: source
+          prNumber: 0
+          branch: branch
+          sha: sha
+          url: url
+        user: user
+      properties:
+        build:
+          $ref: '#/components/schemas/ProjectBuild'
+        image:
+          type: string
+        name:
+          type: string
+        repository:
+          $ref: '#/components/schemas/GitRepository'
+        user:
           type: string
       type: object
     ProjectInfo:
