# pkg/server/workspaces/service.go
@@ -14,19 +14,21 @@ import (
 	"github.com/daytonaio/daytona/pkg/server/apikeys"
 	"github.com/daytonaio/daytona/pkg/server/containerregistries"
 	"github.com/daytonaio/daytona/pkg/server/gitproviders"
+	"github.com/daytonaio/daytona/pkg/server/projectconfig"
 	"github.com/daytonaio/daytona/pkg/server/workspaces/dto"
 	"github.com/daytonaio/daytona/pkg/workspace"
+	"github.com/daytonaio/daytona/pkg/workspace/project"
 )
 
 type IWorkspaceService interface {
-	CreateWorkspace(req dto.CreateWorkspaceRequest) (*workspace.Workspace, error)
+	CreateWorkspace(req dto.CreateWorkspaceDTO) (*workspace.Workspace, error)
 	GetWorkspace(workspaceId string) (*dto.WorkspaceDTO, error)
 	GetWorkspaceLogReader(workspaceId string) (io.Reader, error)
 	GetProjectLogReader(workspaceId, projectName string) (io.Reader, error)
 	ListWorkspaces(verbose bool) ([]dto.WorkspaceDTO, error)
 	RemoveWorkspace(workspaceId string) error
 	ForceRemoveWorkspace(workspaceId string) error
-	SetProjectState(workspaceId string, projectName string, state *workspace.ProjectState) (*workspace.Workspace, error)
+	SetProjectState(workspaceId string, projectName string, state *project.ProjectState) (*workspace.Workspace, error)
 	StartProject(workspaceId string, projectName string) error
 	StartWorkspace(workspaceId string) error
 	StopProject(workspaceId string, projectName string) error
@@ -41,6 +43,7 @@ type WorkspaceServiceConfig struct {
 	WorkspaceStore           workspace.Store
 	TargetStore              targetStore
 	ContainerRegistryService containerregistries.IContainerRegistryService
+	ProjectConfigService     projectconfig.IProjectConfigService
 	ServerApiUrl             string
 	ServerUrl                string
 	Provisioner              provisioner.IProvisioner
@@ -57,6 +60,7 @@ func NewWorkspaceService(config WorkspaceServiceConfig) IWorkspaceService {
 		workspaceStore:           config.WorkspaceStore,
 		targetStore:              config.TargetStore,
 		containerRegistryService: config.ContainerRegistryService,
+		projectConfigService:     config.ProjectConfigService,
 		serverApiUrl:             config.ServerApiUrl,
 		serverUrl:                config.ServerUrl,
 		defaultProjectImage:      config.DefaultProjectImage,
@@ -73,6 +77,7 @@ type WorkspaceService struct {
 	workspaceStore           workspace.Store
 	targetStore              targetStore
 	containerRegistryService containerregistries.IContainerRegistryService
+	projectConfigService     projectconfig.IProjectConfigService
 	provisioner              provisioner.IProvisioner
 	apiKeyService            apikeys.IApiKeyService
 	serverApiUrl             string
@@ -84,7 +89,7 @@ type WorkspaceService struct {
 	builderFactory           build.IBuilderFactory
 }
 
-func (s *WorkspaceService) SetProjectState(workspaceId, projectName string, state *workspace.ProjectState) (*workspace.Workspace, error) {
+func (s *WorkspaceService) SetProjectState(workspaceId, projectName string, state *project.ProjectState) (*workspace.Workspace, error) {
 	ws, err := s.workspaceStore.Find(workspaceId)
 	if err != nil {
 		return nil, err
